feat(auth): add keycloak
Spring boot 3
Spring Security 6
springdoc-openapi 2